--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,409 @@
-#map{
-    width: 100%;
-    height: 800px;
+body{
+    font-family: "Sawarabi Gothic";
 }
 
-.chat{
-    height: 1000px;
+.main{
+    height:100vh;
+    width: 100vw;
+}
+
+/* pc */
+@media screen and (min-width: 641px) {
+    /*ここにpc用スタイルを記述*/
+    .box {
+        width: 100vw;
+        height: 100vh;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .box_img {
+        background-image: url('../img/top_m.jpg');
+        background-size: cover;
+        background-position: center;
+    }
+
+    .title {
+        font-size: 200px;
+        color: #46b8da;
+        opacity: 0.9;
+    }
+
+    .button {
+        display: inline-block;
+        width: 200px;
+        height: 54px;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        background-color: #59b1eb;
+        border: 2px solid #59b1eb;
+        color: #FFFFFF;
+        line-height: 50px;
+
+    }
+
+    .button::before,
+    .button::after {
+        position: absolute;
+        z-index: -1;
+        display: block;
+        content: '';
+    }
+
+    .button,
+    .button::before,
+    .button::after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition: all .3s;
+        transition: all .3s;
+    }
+
+    .button:hover {
+        background-color: #fff;
+        border-color: #59b1eb;
+        color: #59b1eb;
+    }
+
+    .underarrow {
+        position: absolute;
+        bottom: 20px;
+        z-index: 2;
+        display: inline-block;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        text-decoration: none;
+        padding-top: 60px;
+        color: #FFFFFF;
+        font-size: 20px;
+    }
+
+    .underarrow span {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 24px;
+        height: 24px;
+        margin-left: -12px;
+        border-left: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        box-sizing: border-box;
+    }
+
+    .about{
+        font-size: 34px;
+    }
+
+    .room_title{
+        font-size: 34px;
+    }
+
+    .map {
+        width: 100%;
+        height: 700px;
+    }
+
+    #map{
+        width: 100%;
+        height: 70%;
+    }
+
+    .chat {
+        height: 30%;
+    }
+}
+/* smartPhone */
+@media screen and (max-width: 640px) {
+    /*ここにスマホ用スタイルを記述*/
+    .box {
+        width: 100vw;
+        height: 100vh;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .title {
+        font-size: 70px;
+        color: #46b8da;
+        opacity: 0.9;
+    }
+
+    .button {
+        display: inline-block;
+        width: 200px;
+        height: 54px;
+        text-align: center;
+        text-decoration: none;
+        outline: none;
+        background-color: #59b1eb;
+        border: 2px solid #59b1eb;
+        color: #FFFFFF;
+        line-height: 50px;
+
+    }
+
+    .button::before,
+    .button::after {
+        position: absolute;
+        z-index: -1;
+        display: block;
+        content: '';
+    }
+
+    .button,
+    .button::before,
+    .button::after {
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-transition: all .3s;
+        transition: all .3s;
+    }
+
+    .button:hover {
+        background-color: #fff;
+        border-color: #59b1eb;
+        color: #59b1eb;
+    }
+
+    .underarrow {
+        position: absolute;
+        bottom: 20px;
+        z-index: 2;
+        display: inline-block;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        text-decoration: none;
+        padding-top: 60px;
+        color: #FFFFFF;
+        font-size: 20px;
+        opacity: 0.8;
+    }
+
+    .underarrow span {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 24px;
+        height: 24px;
+        margin-left: -12px;
+        border-left: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+        box-sizing: border-box;
+    }
+
+    .box_img {
+        background-image: url('../img/top_s.jpg');
+        background-size: cover;
+        background-position: center;
+    }
+
+    .map {
+        width: 100%;
+        height: 700px;
+    }
+
+    #map{
+        width: 100%;
+        height: 70%;
+    }
+
+    .chat {
+        height: 30%;
+    }
+}
+
+dl.search1{
+    position:relative;
+    background-color:#fff;
+    border:1px solid #aaa;
+    border-radius:6px;
+}
+dl.search1 dt{
+    padding:3px;
+}
+dl.search1 dt input{
+    width:70%;
+    height:30px;
+    line-height:30px;
+    background:none;
+    border:none;
+}
+dl.search1 dd{
+    position:absolute;
+    top:1px;
+    right:1px;
+    width:30%;
+}
+dl.search1 dd button{
+    display:block;
+    background:#59b1eb;
+    width:100%;
+    height:36px;
+    line-height:36px;
+    border:none;
+    border-radius: 0 6px 6px 0;
+}
+dl.search1 dd button:hover {
+    background:#4e91e4;
+}
+dl.search1 dd button span{
+    display:block;
+    color:#FFF;
+}
+
+.addButton{
+    width:200px;
+    font-size:24px;
+    font-weight:bold;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:8px 0 10px;
+    color:#fff;
+    background-color:#49a9d4;
+    border-radius:10px;
+}
+
+input[type=text]{
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border:#a9a9a9 1px solid;
+    -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+    width:200px;
+    height:25px;
+    padding:0 3px;
+}
+
+input[type=text]:focus {
+    border:solid 1px #20b2aa;
+}
+
+input[type=text], select {
+    outline: none;
+}
+
+input[type=button]{
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border:#a9a9a9 1px solid;
+    -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+    width:200px;
+    height:25px;
+    padding:0 3px;
+    cursor:pointer;
+    color:#333;
+    font-weight:bold;
+    background:#f5f5f5;
+    text-shadow:1px 1px 0px #fff;
+}
+
+div.chat {
+    width:100%; /* 横幅 */
+    height:50%; /* 縦幅 */
+    overflow:auto;
+    background-color:#FFF; /* 背景色 */
+    border:1px #F0F0F0 dashed; /* 枠 */
+    font-size:80%; /* 文字サイズ */
+    color:#000000; /* 文字色 */
+    text-align: center;
+}
+div.chat ul li {
+    margin:1em 10px; /* 行間 */
+    list-style: none;
+}
+
+/* balloon-4 bottom-right */
+#balloon-5-bottom-right {
+    position: relative;
+    display: inline-block;
+    padding: 0 15px;
+    width: auto;
+    min-width: 115px;
+    height: 50px;
+    color: #F6F6F6;
+    line-height: 50px;
+    text-align: center;
+    background: #19283C;
+    border-radius: 50px;
+}
+#balloon-5-bottom-right:before {
+    content: "";
+    position: absolute;
+    bottom: -17px; right: 15px;
+    margin-right: 0;
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: #19283C;
+    border-radius: 50%;
+    z-index: 0;
+}
+#balloon-5-bottom-right:after {
+    content: "";
+    position: absolute;
+    bottom: -25px; right: 25px;
+    margin-right: 0;
+    display: block;
+    width: 8px;
+    height: 8px;
+    background: #19283C;
+    border-radius: 50%;
+    z-index: 0;
+}
+
+
+.current_button{
+    width:200px;
+    font-size:24px;
+    font-weight:bold;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:8px 0 10px;
+    color:#fff;
+    background-color:#49a9d4;
+    border-radius:10px;
 }
