--- a/public/css/app.css
+++ b/public/css/app.css
@@ -128,6 +128,49 @@ body{
     .chat {
         height: 30%;
     }
+
+    input[type=text]{
+        border-radius: 5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -o-border-radius: 5px;
+        -ms-border-radius: 5px;
+        border:#a9a9a9 1px solid;
+        -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        width:200px;
+        height:25px;
+        padding:0 3px;
+    }
+
+    input[type=text]:focus {
+        border:solid 1px #20b2aa;
+    }
+
+    input[type=text], select {
+        outline: none;
+    }
+
+    input[type=button]{
+        border-radius: 5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -o-border-radius: 5px;
+        -ms-border-radius: 5px;
+        border:#a9a9a9 1px solid;
+        -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        width:200px;
+        height:25px;
+        padding:0 3px;
+        cursor:pointer;
+        color:#333;
+        font-weight:bold;
+        background:#f5f5f5;
+        text-shadow:1px 1px 0px #fff;
+    }
 }
 /* smartPhone */
 @media screen and (max-width: 640px) {
@@ -243,6 +286,49 @@ body{
     .chat {
         height: 30%;
     }
+
+    input[type=text]{
+        border-radius: 5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -o-border-radius: 5px;
+        -ms-border-radius: 5px;
+        border:#a9a9a9 1px solid;
+        -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        width:50%;
+        height:40px;
+        padding:0 3px;
+    }
+
+    input[type=text]:focus {
+        border:solid 1px #20b2aa;
+    }
+
+    input[type=text], select {
+        outline: none;
+    }
+
+    input[type=button]{
+        border-radius: 5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -o-border-radius: 5px;
+        -ms-border-radius: 5px;
+        border:#a9a9a9 1px solid;
+        -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
+        -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
+        width:50%;
+        height:40px;
+        padding:0 3px;
+        cursor:pointer;
+        color:#333;
+        font-weight:bold;
+        background:#f5f5f5;
+        text-shadow:1px 1px 0px #fff;
+    }
 }
 
 dl.search1{
@@ -295,49 +381,6 @@ dl.search1 dd button span{
     color:#fff;
     background-color:#49a9d4;
     border-radius:10px;
-}
-
-input[type=text]{
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    -ms-border-radius: 5px;
-    border:#a9a9a9 1px solid;
-    -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
-    width:200px;
-    height:25px;
-    padding:0 3px;
-}
-
-input[type=text]:focus {
-    border:solid 1px #20b2aa;
-}
-
-input[type=text], select {
-    outline: none;
-}
-
-input[type=button]{
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    -ms-border-radius: 5px;
-    border:#a9a9a9 1px solid;
-    -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
-    width:200px;
-    height:25px;
-    padding:0 3px;
-    cursor:pointer;
-    color:#333;
-    font-weight:bold;
-    background:#f5f5f5;
-    text-shadow:1px 1px 0px #fff;
 }
 
 div.chat {
