--- a/public/css/app.css
+++ b/public/css/app.css
@@ -297,8 +297,8 @@ body{
         -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
         -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
         box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
-        width:50%;
-        height:40px;
+        width:150px;
+        height:30px;
         padding:0 3px;
     }
 
@@ -320,8 +320,8 @@ body{
         -moz-box-shadow: inset 0 0 5px rgba(0,0,0,0.2),0 0 2px rgba(0,0,0,0.3);
         -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
         box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2),0 0 2px rgba(0,0,0,0.3);
-        width:50%;
-        height:40px;
+        width:150px;
+        height:30px;
         padding:0 3px;
         cursor:pointer;
         color:#333;
